made fixed background height extend beyond page with overflow hidden in attempt to fixed bug on safari

--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -31,8 +31,9 @@ body,
   position: fixed;
   top: 0;
   left: 0;
-  height: 100vh;
   width: 100vw;
+  height: 120vh;
+  overflow: hidden;
   background-image: url("../src/images/ultimate_manga_wallpaper_by_omega_sly_db5cpdt-fullview.jpg");
   background-position: top;
   background-repeat: no-repeat;
